--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.23/jspdf-autotable.min.js"></script>
 
+    <!-- Babel Standalone for JSX/TSX Transpilation in Browser -->
+    <script src="https://unpkg.com/@babel/standalone@7/babel.min.js"></script>
+
     <script type="importmap">
 {
   "imports": {
@@ -25,6 +28,8 @@
 </head>
   <body class="bg-gray-100">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
-  </body>
+    <!-- Changed type to "text/babel" to enable in-browser transpilation -->
+    <script type="text/babel" data-type="module" src="/index.tsx"></script>
+  <script type="module" src="/index.tsx"></script>
+</body>
 </html>
